# oxde

./: .gitignore  Cargo.toml  README.md  oxde.example.toml
.cargo/: config.toml
.github/workflows/: static.yml
oxde-db/: Cargo.toml
oxde-db/src/: lib.rs  models.rs
oxde-ui/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
oxde-ui/src/: main.tsx  style.css
oxde-ui/src/components/: create-app-form.tsx  deployment-logs.tsx  deployment-stats.tsx  env-var-editor.tsx  login-screen.tsx  not-found.tsx  permissions-editor.tsx  sparkline.tsx
oxde-ui/src/components/ui/: badge.tsx  button.tsx  chart.tsx  checkbox.tsx  input.tsx  select.tsx  tabs.tsx
oxde-ui/src/lib/: api.ts  auth.tsx  queries.ts  theme.ts  types.ts  use-time-series.ts  utils.ts
oxde-ui/src/routes/: __root.tsx  apps.$name.tsx  host.tsx  index.tsx  settings.tsx  users.tsx
site/: index.html
src/: accounts.rs  api_tokens.rs  auth.rs  authz.rs  config.rs  containers.rs  dashboard_assets.rs  deployment_logs.rs  error.rs  git_fetch.rs  host_stats.rs  main.rs  models.rs  reverse_proxy.rs  state.rs  storage.rs  zip_extract.rs
src/routes/: api.rs  apps.rs  auth_routes.rs  dashboard.rs  host_routing.rs  mcp.rs  mod.rs  users.rs
static/: style.css
templates/: app_detail.html  apps_list.html  base.html  index.html
toasty/: history.toml
toasty/migrations/: 0000_create_users.sql  0001_create_apps_and_deployments.sql  0002_add_api_tokens.sql
toasty/snapshots/: 0000_snapshot.toml  0001_snapshot.toml  0002_snapshot.toml
xtask/: Cargo.toml
xtask/src/: main.rs
