[package]
name = "oxde"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
askama = "0.16.0"
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = "0.7.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
