[workspace]
members = ["xtask"]

[package]
name = "oxde"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["multipart"] }
base64 = "0.22.1"
bollard = "0.21.0"
bytes = "1.12.1"
futures-util = "0.3.32"
gix = { version = "0.85.0", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "tokio"] }
jiff = { version = "0.2.32", features = ["serde"] }
rust-embed = { version = "8.12.0", features = ["mime-guess"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.3"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["fs", "trace", "validate-request"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ts-rs = { version = "12.0.1", features = ["jiff-impl"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
