[workspace]
members = ["oxde-db","xtask"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[package]
name = "oxde"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["multipart"] }
base64 = "0.22.1"
bollard = "0.21.0"
bytes = "1.12.1"
futures-util = "0.3.32"
gix = { version = "0.85.0", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "tokio"] }
jiff = { version = "0.2.32", features = ["serde"] }
oxde-db = { version = "0.0.0", path = "oxde-db" }
papaya = "0.2.4"
rand = "0.10.2"
rmcp = { version = "2.2.0", features = ["server", "transport-streamable-http-server"] }
rust-embed = { version = "8.12.0", features = ["mime-guess"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = { version = "0.39.6", default-features = false, features = ["system", "disk"] }
thiserror = "2.0.18"
toasty = "0.8.0"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.3"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["fs", "trace", "validate-request"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ts-rs = { version = "12.0.1", features = ["jiff-impl"] }
uuid = { version = "1.24.0", features = ["v7"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
